# libstarlog

./: .editorconfig  README.md  meson.build
include/: logging.h
scripts/: build.sh  globber.sh
src/: logging.c
tests/: dev_test.c  dev_test.h  indev_test_suite.c  indev_test_suite.h
